<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    card_view:cardBackgroundColor="@color/md_theme_light_primaryContainer"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/holder_place"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/cabin_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_baseline_house_24"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/holder_place"
            card_view:layout_constraintBottom_toTopOf="@id/map_holder"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/cabin_name_dummy"
            android:textSize="32sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@id/cabin_picture"
            card_view:layout_constraintTop_toBottomOf="@+id/holder_place"
            card_view:layout_constraintBottom_toTopOf="@id/info_first"/>

        <TextView
            android:id="@+id/info_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/cabin_info_1_dummy"
            android:textSize="16sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@id/cabin_picture"
            card_view:layout_constraintTop_toBottomOf="@+id/title"
            card_view:layout_constraintBottom_toTopOf="@id/info_second"/>

        <TextView
            android:id="@+id/info_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/cabin_info_2_dummy"
            android:textSize="24sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@id/cabin_picture"
            card_view:layout_constraintTop_toBottomOf="@id/info_first"
            card_view:layout_constraintBottom_toTopOf="@id/choose_list_checkbox" />



        <View
            android:id="@+id/map_holder"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            card_view:layout_constraintBottom_toTopOf="@id/weather_forecast"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/cabin_picture" />

        <TextView
            android:id="@+id/weather_forecast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/weather_forecast"
            android:textSize="24sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/map_holder" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/weather_picture"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@id/weather_forecast_temperature"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/weather_forecast" />

        <TextView
            android:id="@+id/weather_forecast_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/forecast_temperature"
            android:textSize="22sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@id/weather_forecast_rain"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/weather_forecast" />

        <TextView
            android:id="@+id/weather_forecast_rain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/forecast_rain"
            android:textSize="22sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@id/weather_forecast_wind"
            card_view:layout_constraintStart_toEndOf="@id/weather_forecast_temperature"
            card_view:layout_constraintTop_toBottomOf="@id/weather_forecast" />

        <TextView
            android:id="@+id/weather_forecast_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/forecast_wind"
            android:textSize="22sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@id/weather_forecast_rain"
            card_view:layout_constraintTop_toBottomOf="@id/weather_forecast" />

        <CheckBox
            android:id="@+id/choose_list_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Velg"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/cabin_picture"
            card_view:layout_constraintTop_toBottomOf="@+id/info_second"
            card_view:layout_constraintBottom_toTopOf="@id/map_holder" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>